refactor: rework beam scoring data structures and close test gaps
- Unpack BeamScoring's stem inputs into parallel arrays, so the scoring
  loops read scalars instead of chasing two lists of records
- Fuse quant generation with scoring, dropping the candidate list and its
  per-candidate configuration and demerit objects; only an improvement
  allocates, and debug attribution re-scores the logged candidates
- Replace the ported Direction-index idiom with named per-edge helpers,
  preserving the original summation order
- Hoist the edge beam counts, the shared forbidden-quant demerit, and the
  group-invariant stem-info terms into the constructor
- Share the beam blot stroke instead of rebuilding it on every repaint
- Reuse Staff.STAFF_HALF_SS and Math.clamp rather than restating them
- Delete the dead BEAM_SHIFT_SS constant and six unused accessors
- Derive the beam member count from the loop bounds and drop the
  redundant first-column flag in LayoutEngine
- Name the staff space in LilyPond's beam translation formula
- Cover NoteRenderer's beamed stem branch, which the forced-stem floor
  fix depended on and no test exercised
- Add 32nd-note coverage for the second ideal-stem clamp and the
  clamp-to-last table lookup, both inert below three beams
- Test the forbidden-quant, horizontal-inter and stem-length scorers in
  isolation, pin the feasibility shift and the inclusive quant range,
  and pin the beam constants to their LilyPond sources

Closes #579