@@ -20,7 +20,6 @@
 
 package songscribe.layout;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -29,6 +28,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import songscribe.engraving.LineThickness;
+import songscribe.engraving.Staff;
 
 /**
  * Port of LilyPond's beam-positioning pipeline ({@code Beam_scoring_problem}),
@@ -128,7 +128,7 @@ final class BeamScoring {
     private static final double HORIZONTAL_INTER_QUANT_TOLERANCE_SS = 0.01;
 
     /** Distance between adjacent staff lines, in staff spaces. */
-    private static final double STAFF_LINE_STEP_SS = 1.0;
+    static final double STAFF_LINE_STEP_SS = 1.0;
 
     /** Format used for every number in this class's debug output. */
     private static final String LOG_NUMBER_FORMAT = "%.3f";
@@ -150,14 +150,14 @@ final class BeamScoring {
      * rather than sitting exactly on its edge, which keeps the whole quant
      * candidate window in feasible territory instead of straddling the minimum.
      */
-    private static final double FEASIBLE_POINT_INSET_SS = 2.0;
+    static final double FEASIBLE_POINT_INSET_SS = 2.0;
 
     // ---------------------------------------------------------------------
     // Geometry — matches the renderer, NOT LilyPond's raw numbers.
     // ---------------------------------------------------------------------
 
-    /** Half-height of a 5-line staff, in staff spaces. */
-    static final double STAFF_RADIUS_SS = 2.0;
+    /** Half-height of a 5-line staff, in staff spaces (LilyPond's staff radius). */
+    static final double STAFF_RADIUS_SS = Staff.STAFF_HALF_SS;
 
     /** Beam thickness in staff spaces (LilyPond's {@code beam_thickness}). */
     static final double BEAM_THICKNESS_SS = LineThickness.BEAM_THICKNESS_SS;
@@ -216,8 +216,6 @@ final class BeamScoring {
      */
     record BeamPosition(double leftYUpSs, double rightYUpSs) {}
 
-    private final List<StemInput> stems;
-
     /** +1 for stems up, -1 for stems down. */
     private final int dirSign;
 
@@ -230,42 +228,105 @@ final class BeamScoring {
     /** X of the last stem, relative to the first (0 for a single-column group). */
     private final double xSpan;
 
+    // The per-stem inputs, unpacked into parallel arrays. LilyPond holds these in
+    // vectors of value structs; keeping records here instead would put two levels
+    // of indirection inside the scoring loops, which run once per stem per
+    // candidate. The StemInput list stays the constructor's API, nothing more.
+
+    private final int stemCount;
+    private final double[] stemXs;
+    private final double[] stemHeadYs;
+    private final int[] stemHeadHalfPositions;
+
+    /** Beam count of the first stem — only the edges' counts are ever scored. */
+    private final int edgeBeamCountLeft;
+
+    /** Beam count of the last stem. */
+    private final int edgeBeamCountRight;
+
+    /** Demerit charged per forbidden-quant hit, shared by both edges. */
+    private final double extraDemerit;
+
+    // Stem-info terms that depend only on the group's max beam count and forced
+    // fraction, so they are the same for every stem (see calcStemInfo).
+
+    private final double idealLengthSs;
+    private final double minimumLengthSs;
+    private final double idealFloorSs;
+    private final double stemShortenSs;
+
     // ---------------------------------------------------------------------
     // Pipeline state
     // ---------------------------------------------------------------------
 
-    private List<StemInfo> stemInfos = List.of();
+    private final double[] stemIdealYs;
+    private final double[] stemShortestYs;
     private double unquantedLeftY;
     private double unquantedRightY;
     private double musicalDy;
 
     BeamScoring(List<StemInput> stems, int dirSign, double forcedFraction) {
-        this.stems = List.copyOf(stems);
         this.dirSign = dirSign;
         this.forcedFraction = forcedFraction;
 
+        stemCount = stems.size();
+        stemXs = new double[stemCount];
+        stemHeadYs = new double[stemCount];
+        stemHeadHalfPositions = new int[stemCount];
+        stemIdealYs = new double[stemCount];
+        stemShortestYs = new double[stemCount];
+
         var count = 1;
-        for (var stem : this.stems) {
+
+        for (var i = 0; i < stemCount; i++) {
+            var stem = stems.get(i);
+            stemXs[i] = stem.xSs();
+            stemHeadYs[i] = stem.headYUpSs();
+            stemHeadHalfPositions[i] = stem.headHalfPos();
             count = Math.max(count, stem.beamCount());
         }
 
         maxBeamCount = count;
-        xSpan = this.stems.isEmpty() ? 0.0 : this.stems.get(this.stems.size() - 1).xSs() - this.stems.get(0).xSs();
+        xSpan = stemCount == 0 ? 0.0 : stemXs[stemCount - 1] - stemXs[0];
+        edgeBeamCountLeft = stemCount == 0 ? 1 : stems.get(0).beamCount();
+        edgeBeamCountRight = stemCount == 0 ? 1 : stems.get(stemCount - 1).beamCount();
+        extraDemerit = SECONDARY_BEAM_DEMERIT / Math.max(edgeBeamCountLeft, edgeBeamCountRight);
+
+        // Not the stem's own beam count: LilyPond feeds calc_stem_info
+        // Beam::get_direction_beam_count, the group's maximum for this direction.
+        // Its comment in stem.cc gives the reason — "a8[ a32] must be horizontal"
+        // — and only that shared count makes the ideal ends of equal-pitch edge
+        // stems agree, which is what lets least_squares_positions see dy == 0.
+        var heightOfBeams = BEAM_THICKNESS_SS + (maxBeamCount - 1) * BEAM_TRANSLATION_SS;
+        var halfBeamThickness = BEAM_THICKNESS_SS / 2.0;
+
+        // Stems only extend to the center of the beam, hence the half-thickness terms.
+        idealLengthSs = Math.max(
+            listRef(BEAMED_LENGTHS_SS, maxBeamCount - 1) - halfBeamThickness,
+            listRef(BEAMED_MINIMUM_FREE_LENGTHS_SS, maxBeamCount - 1) + heightOfBeams - halfBeamThickness
+        );
+        minimumLengthSs = listRef(BEAMED_EXTREME_MINIMUM_FREE_LENGTHS_SS, maxBeamCount - 1)
+            + heightOfBeams
+            - halfBeamThickness;
+
+        // The lowest beam of an (UP) beam must never be lower than the second staff line.
+        idealFloorSs = -STAFF_LINE_STEP_SS - BEAM_THICKNESS_SS + heightOfBeams;
+
+        // Port of Beam::calc_stem_shorten.
+        stemShortenSs = listRef(BEAMED_STEM_SHORTEN_SS, maxBeamCount - 1) * forcedFraction;
     }
 
     // ---------------------------------------------------------------------
     // Stem info (port of Stem::calc_stem_info, lily/stem.cc)
     // ---------------------------------------------------------------------
 
-    /** Computes and caches {@link #stemInfos} for every stem of the group. */
+    /** Computes and caches the ideal and shortest stem ends for every stem. */
     void computeStemInfos() {
-        var infos = new ArrayList<StemInfo>(stems.size());
-
-        for (var stem : stems) {
-            infos.add(calcStemInfo(stem));
+        for (var i = 0; i < stemCount; i++) {
+            var info = calcStemInfo(stemHeadYs[i]);
+            stemIdealYs[i] = info.idealYUpSs();
+            stemShortestYs[i] = info.shortestYUpSs();
         }
-
-        stemInfos = List.copyOf(infos);
     }
 
     /**
@@ -275,47 +336,38 @@ final class BeamScoring {
      * pointed up) and multiplies by the direction only at the end; this port
      * keeps that structure so the clamps read the same as the original.
      *
+     * <p>Every term but {@code noteStart} is fixed for the whole group and is
+     * computed once in the constructor.
+     *
      * @param stem the stem to measure
      * @return the stem's ideal and shortest beam-side ends, in real Y-up ss
      */
     StemInfo calcStemInfo(StemInput stem) {
-        // Not the stem's own beam count: LilyPond feeds calc_stem_info
-        // Beam::get_direction_beam_count, the group's maximum for this direction.
-        // Its comment in stem.cc gives the reason — "a8[ a32] must be horizontal"
-        // — and only that shared count makes the ideal ends of equal-pitch edge
-        // stems agree, which is what lets least_squares_positions see dy == 0.
-        var beamCount = maxBeamCount;
-        var heightOfBeams = BEAM_THICKNESS_SS + (beamCount - 1) * BEAM_TRANSLATION_SS;
-        var halfBeamThickness = BEAM_THICKNESS_SS / 2.0;
+        return calcStemInfo(stem.headYUpSs());
+    }
 
-        // Stems only extend to the center of the beam, hence the half-thickness terms.
-        var idealLength = Math.max(
-            listRef(BEAMED_LENGTHS_SS, beamCount - 1) - halfBeamThickness,
-            listRef(BEAMED_MINIMUM_FREE_LENGTHS_SS, beamCount - 1) + heightOfBeams - halfBeamThickness
-        );
-
+    /**
+     * @param headYUpSs the notehead's Y-up position in staff spaces
+     * @return the stem's ideal and shortest beam-side ends, in real Y-up ss
+     */
+    private StemInfo calcStemInfo(double headYUpSs) {
         // Direction-multiplied space: positive is "away from the notehead".
-        var noteStart = stem.headYUpSs() * dirSign;
-        var idealY = noteStart + idealLength;
+        var noteStart = headYUpSs * dirSign;
+        var idealY = noteStart + idealLengthSs;
 
         // The highest beam of an (UP) beam must never be lower than the middle staff line…
         idealY = Math.max(idealY, 0.0);
         // …and its lowest beam must never be lower than the second staff line.
-        idealY = Math.max(idealY, -1.0 - BEAM_THICKNESS_SS + heightOfBeams);
+        idealY = Math.max(idealY, idealFloorSs);
 
-        // Port of Beam::calc_stem_shorten.
-        idealY -= listRef(BEAMED_STEM_SHORTEN_SS, beamCount - 1) * forcedFraction;
+        idealY -= stemShortenSs;
 
-        var minimumLength = listRef(BEAMED_EXTREME_MINIMUM_FREE_LENGTHS_SS, beamCount - 1)
-            + heightOfBeams
-            - halfBeamThickness;
-
-        return new StemInfo(idealY * dirSign, (noteStart + minimumLength) * dirSign);
+        return new StemInfo(idealY * dirSign, (noteStart + minimumLengthSs) * dirSign);
     }
 
     /** Port of LilyPond's {@code robust_list_ref}: clamps the index to the last entry. */
     private static double listRef(double[] values, int index) {
-        return values[Math.min(Math.max(index, 0), values.length - 1)];
+        return values[Math.clamp(index, 0, values.length - 1)];
     }
 
     // ---------------------------------------------------------------------
@@ -376,21 +428,19 @@ final class BeamScoring {
      * last, and {@code stem_ypositions_} is uniformly 0 (single staff).
      */
     private void leastSquaresPositions() {
-        if (stemInfos.isEmpty()) {
+        if (stemCount == 0) {
             return;
         }
 
-        var idealLeft = stemInfos.get(0).idealYUpSs();
-        var idealRight = stemInfos.get(stemInfos.size() - 1).idealYUpSs();
+        var idealLeft = stemIdealYs[0];
+        var idealRight = stemIdealYs[stemCount - 1];
 
         if (idealRight - idealLeft == 0.0) {
-            var firstHeadY = stems.get(0).headYUpSs();
-            var lastHeadY = stems.get(stems.size() - 1).headYUpSs();
-            var chordDy = lastHeadY - firstHeadY;
+            var chordDy = stemHeadYs[stemCount - 1] - stemHeadYs[0];
 
             // Simple two-stem beams whose stems both reach the middle line get an
             // artificial slope, since the ideal positions cannot express one.
-            if (idealLeft == 0.0 && stems.size() == 2 && chordDy != 0.0) {
+            if (idealLeft == 0.0 && stemCount == 2 && chordDy != 0.0) {
                 var half = BEAM_THICKNESS_SS / 2.0;
                 var towardHigherHead = chordDy > 0.0;
                 unquantedLeftY = towardHigherHead ? -half : half;
@@ -428,16 +478,16 @@ final class BeamScoring {
         var sqx = 0.0;
         var sxy = 0.0;
 
-        for (var i = 0; i < stems.size(); i++) {
-            var x = stems.get(i).xSs();
-            var y = stemInfos.get(i).idealYUpSs();
-            sx += x;
-            sy += y;
-            sqx += x * x;
-            sxy += x * y;
+        for (var i = 0; i < stemCount; i++) {
+            var stemX = stemXs[i];
+            var idealY = stemIdealYs[i];
+            sx += stemX;
+            sy += idealY;
+            sqx += stemX * stemX;
+            sxy += stemX * idealY;
         }
 
-        double count = stems.size();
+        double count = stemCount;
         var den = count * sqx - sx * sx;
 
         if (count == 0.0 || den == 0.0) {
@@ -470,7 +520,7 @@ final class BeamScoring {
      * which then skips the damping formula altogether.
      */
     private void slopeDamping() {
-        if (stems.size() <= 1) {
+        if (stemCount <= 1) {
             return;
         }
 
@@ -516,22 +566,16 @@ final class BeamScoring {
      *         concaveness magnitude
      */
     private double calcConcaveness() {
-        if (stems.size() <= 2) {
+        if (stemCount <= 2) {
             return 0.0;
         }
 
-        var positions = new int[stems.size()];
-
-        for (var i = 0; i < stems.size(); i++) {
-            positions[i] = stems.get(i).headHalfPos();
-        }
-
-        var singleNotesConcave = isConcaveSingleNotes(positions, dirSign);
+        var singleNotesConcave = isConcaveSingleNotes(stemHeadHalfPositions, dirSign);
 
         if (LOG.isDebugEnabled()) {
             LOG.debug(
                 "  headPositions={} isConcaveSingleNotes={}",
-                Arrays.toString(positions),
+                Arrays.toString(stemHeadHalfPositions),
                 singleNotesConcave
             );
         }
@@ -540,7 +584,7 @@ final class BeamScoring {
             return CONCAVE_FORCE_FLAT;
         }
 
-        return calcPositionsConcaveness(positions, dirSign);
+        return calcPositionsConcaveness(stemHeadHalfPositions, dirSign);
     }
 
     /**
@@ -627,7 +671,7 @@ final class BeamScoring {
      * ends up shorter than its allowed minimum, keeping the slope.
      */
     private void shiftRegionToValid() {
-        if (stems.isEmpty()) {
+        if (stemCount == 0) {
             return;
         }
 
@@ -636,10 +680,10 @@ final class BeamScoring {
 
         // Intersection over stems of the half-line of feasible left-end Y values;
         // it is bounded on the side opposite the stem direction.
-        var feasibleBound = stemInfos.get(0).shortestYUpSs() - slope * stems.get(0).xSs();
+        var feasibleBound = stemShortestYs[0] - slope * stemXs[0];
 
-        for (var i = 1; i < stems.size(); i++) {
-            var leftYBound = stemInfos.get(i).shortestYUpSs() - slope * stems.get(i).xSs();
+        for (var i = 1; i < stemCount; i++) {
+            var leftYBound = stemShortestYs[i] - slope * stemXs[i];
             feasibleBound = dirSign > 0
                 ? Math.max(feasibleBound, leftYBound)
                 : Math.min(feasibleBound, leftYBound);
@@ -714,83 +758,46 @@ final class BeamScoring {
         }
     }
 
-    /** One candidate beam placement and the demerits accumulated against it. */
-    private static final class BeamConfiguration {
-
-        private double leftY;
-        private double rightY;
-        private double demerits;
-
-        /** The breakdown behind {@link #demerits}; null until {@link #score} runs. */
-        @Nullable
-        private Demerits breakdown;
-
-        /**
-         * Port of {@code Beam_configuration::new_config}. LilyPond truncates the
-         * unquanted position toward zero before adding the quant offset; Java's
-         * {@code (int)} cast has exactly that behavior.
-         *
-         * @param unquantedLeft  the unquanted left Y
-         * @param unquantedRight the unquanted right Y
-         * @param offsetLeft     the left quant offset
-         * @param offsetRight    the right quant offset
-         * @return the candidate, seeded with a tie-breaker demerit that favors
-         *         offsets closest to the unquanted position
-         */
-        static BeamConfiguration newConfig(
-            double unquantedLeft,
-            double unquantedRight,
-            double offsetLeft,
-            double offsetRight
-        ) {
-            var config = new BeamConfiguration();
-            config.leftY = (int) unquantedLeft + offsetLeft;
-            config.rightY = (int) unquantedRight + offsetRight;
-            config.demerits = (Math.abs(offsetLeft) + Math.abs(offsetRight)) / INITIAL_DEMERIT_SCALE;
-            return config;
-        }
+    /**
+     * One candidate beam placement and the demerits scored against it. Only the
+     * running best (and, under debug logging, the best flat candidate) is ever
+     * materialized — see {@link #chooseBestConfiguration()}.
+     *
+     * @param leftY    the beam center Y at the first stem
+     * @param rightY   the beam center Y at the last stem
+     * @param initial  the seed tie-breaker demerit, kept for debug attribution
+     * @param demerits the total demerits scored against this placement
+     */
+    private record Candidate(double leftY, double rightY, double initial, double demerits) {
 
         double dy() {
             return rightY - leftY;
         }
-
-        /**
-         * @param edge {@link BeamScoring#LEFT_EDGE} or {@link BeamScoring#RIGHT_EDGE}
-         * @return that edge's Y
-         */
-        double y(int edge) {
-            return edge == LEFT_EDGE ? leftY : rightY;
-        }
     }
-
-    /** Index of the left (first stem) edge in the two-edge loops. */
-    private static final int LEFT_EDGE = 0;
-
-    /** Index of the right (last stem) edge in the two-edge loops. */
-    private static final int RIGHT_EDGE = 1;
 
     /**
      * Port of the {@code quant_range_} setup in {@code init_instance_variables}:
      * the beam center must clear the edge stem's notehead by the beam stack's
      * height plus half a staff space.
      *
-     * @param stem the first or last stem of the group
+     * @param headYUpSs the edge stem's notehead Y-up position
+     * @param beamCount the edge stem's beam count
      * @return the bound on that edge's candidate Y — a lower bound for stems up,
      *         an upper bound for stems down
      */
-    private double quantBound(StemInput stem) {
+    double quantBound(double headYUpSs, int beamCount) {
         var widen = QUANT_RANGE_PADDING_SS
-            + (stem.beamCount() - 1) * BEAM_TRANSLATION_SS
+            + (beamCount - 1) * BEAM_TRANSLATION_SS
             + BEAM_THICKNESS_SS / 2.0;
-        return stem.headYUpSs() + dirSign * widen;
+        return headYUpSs + dirSign * widen;
     }
 
     /**
      * @param y     a candidate edge Y
-     * @param bound the bound from {@link #quantBound(StemInput)}
+     * @param bound the bound from {@link #quantBound(double, int)}
      * @return whether the candidate lies inside the edge's quant range
      */
-    private boolean withinQuantRange(double y, double bound) {
+    boolean withinQuantRange(double y, double bound) {
         return dirSign > 0 ? y >= bound : y <= bound;
     }
 
@@ -799,39 +806,86 @@ final class BeamScoring {
      * collision region widening and without {@code grid_shift} (which only applies
      * to more than four beams — SongScribe caps out at three).
      *
-     * @return every in-range left/right quant combination
+     * @return the quant offset applied to each edge, one per candidate position
      */
-    private List<BeamConfiguration> generateQuants() {
+    private static double[] quantOffsets() {
         var baseQuants = new double[] { STRADDLE_SS, SIT_SS, INTER_SS, HANG_SS };
-        var offsets = new ArrayList<Double>();
+        var offsets = new double[REGION_SIZE * 2 * baseQuants.length];
+        var next = 0;
 
         // Asymmetric on purpose: LilyPond's loop runs i < region_size.
         for (var i = -REGION_SIZE; i < REGION_SIZE; i++) {
             for (var quant : baseQuants) {
-                offsets.add(i + quant);
+                offsets[next] = i + quant;
+                next++;
             }
         }
 
-        var boundLeft = quantBound(stems.get(0));
-        var boundRight = quantBound(stems.get(stems.size() - 1));
-        var configs = new ArrayList<BeamConfiguration>();
+        return offsets;
+    }
+
+    /**
+     * Generates and scores every in-range left/right quant combination, keeping
+     * only the best. LilyPond materializes the whole candidate list and sorts it
+     * lazily; nothing here needs a candidate after a better one is found, so
+     * generation and scoring are fused and only an improvement allocates.
+     *
+     * @return the lowest-demerit candidate, or null when every combination fell
+     *         outside the edges' quant ranges
+     */
+    @Nullable
+    private Candidate chooseBestConfiguration() {
+        var offsets = quantOffsets();
+        var boundLeft = quantBound(stemHeadYs[0], edgeBeamCountLeft);
+        var boundRight = quantBound(stemHeadYs[stemCount - 1], edgeBeamCountRight);
+
+        // LilyPond truncates the unquanted position toward zero before adding the
+        // quant offset; Java's (int) cast has exactly that behavior.
+        var baseLeft = (int) unquantedLeftY;
+        var baseRight = (int) unquantedRightY;
+        var debug = LOG.isDebugEnabled();
+
+        Candidate best = null;
+        Candidate bestFlat = null;
+        var considered = 0;
 
         for (var offsetLeft : offsets) {
-            for (var offsetRight : offsets) {
-                var config = BeamConfiguration.newConfig(
-                    unquantedLeftY,
-                    unquantedRightY,
-                    offsetLeft,
-                    offsetRight
-                );
+            var leftY = baseLeft + offsetLeft;
 
-                if (withinQuantRange(config.leftY, boundLeft) && withinQuantRange(config.rightY, boundRight)) {
-                    configs.add(config);
+            if (!withinQuantRange(leftY, boundLeft)) {
+                continue;
+            }
+
+            for (var offsetRight : offsets) {
+                var rightY = baseRight + offsetRight;
+
+                if (!withinQuantRange(rightY, boundRight)) {
+                    continue;
+                }
+
+                considered++;
+
+                // Favors the offsets closest to the unquanted position.
+                var initial = (Math.abs(offsetLeft) + Math.abs(offsetRight)) / INITIAL_DEMERIT_SCALE;
+                var demerits = score(leftY, rightY, initial);
+
+                if (best == null || demerits < best.demerits()) {
+                    best = new Candidate(leftY, rightY, initial, demerits);
+                }
+
+                if (debug
+                    && Math.abs(rightY - leftY) < BEAM_EPS
+                    && (bestFlat == null || demerits < bestFlat.demerits())) {
+                    bestFlat = new Candidate(leftY, rightY, initial, demerits);
                 }
             }
         }
 
-        return configs;
+        if (best != null) {
+            logChoice(considered, best, bestFlat);
+        }
+
+        return best;
     }
 
     // ---------------------------------------------------------------------
@@ -857,24 +911,44 @@ final class BeamScoring {
     }
 
     /**
-     * Runs every applicable scorer against a candidate, recording both the total
-     * and the per-scorer breakdown on it.
+     * Runs every applicable scorer against a candidate placement.
      *
-     * @param config the candidate to score
+     * @param leftY   the beam center Y at the first stem
+     * @param rightY  the beam center Y at the last stem
+     * @param initial the seed tie-breaker demerit
+     * @return the candidate's total demerits
      */
-    private void score(BeamConfiguration config) {
-        var breakdown = new Demerits(
-            config.demerits,
-            scoreStemLengths(config),
-            scoreSlopeDirection(config),
-            scoreSlopeMusical(config),
-            scoreSlopeIdeal(config),
-            scoreHorizontalInterQuants(config),
-            scoreForbiddenQuants(config)
-        );
+    private double score(double leftY, double rightY, double initial) {
+        return initial
+            + scoreStemLengths(leftY, rightY)
+            + scoreSlopeDirection(leftY, rightY)
+            + scoreSlopeMusical(leftY, rightY)
+            + scoreSlopeIdeal(leftY, rightY)
+            + scoreHorizontalInterQuants(leftY, rightY)
+            + scoreForbiddenQuants(leftY, rightY);
+    }
 
-        config.breakdown = breakdown;
-        config.demerits = breakdown.total();
+    /**
+     * Re-runs the scorers to attribute a candidate's total to the scorer
+     * responsible for it. Only the one or two candidates that reach debug output
+     * are broken down this way, so the repeated scoring costs nothing in the
+     * normal case.
+     *
+     * @param candidate the candidate to describe
+     * @return the per-scorer contributions behind its total
+     */
+    private Demerits breakdownOf(Candidate candidate) {
+        var leftY = candidate.leftY();
+        var rightY = candidate.rightY();
+        return new Demerits(
+            candidate.initial(),
+            scoreStemLengths(leftY, rightY),
+            scoreSlopeDirection(leftY, rightY),
+            scoreSlopeMusical(leftY, rightY),
+            scoreSlopeIdeal(leftY, rightY),
+            scoreHorizontalInterQuants(leftY, rightY),
+            scoreForbiddenQuants(leftY, rightY)
+        );
     }
 
     /**
@@ -884,23 +958,23 @@ final class BeamScoring {
      * here: it is the French-beaming stem-end correction, and SongScribe has no
      * French beaming (see issue #652, which reintroduces it).
      *
-     * @param config the candidate to score
+     * @param leftY  the beam center Y at the first stem
+     * @param rightY the beam center Y at the last stem
      * @return the demerits charged
      */
-    private double scoreStemLengths(BeamConfiguration config) {
+    double scoreStemLengths(double leftY, double rightY) {
         var total = 0.0;
 
-        for (var i = 0; i < stems.size(); i++) {
-            var x = stems.get(i).xSs();
-            var currentY = config.rightY * x / xSpan + config.leftY * (xSpan - x) / xSpan;
-            var info = stemInfos.get(i);
+        for (var i = 0; i < stemCount; i++) {
+            var stemX = stemXs[i];
+            var currentY = rightY * stemX / xSpan + leftY * (xSpan - stemX) / xSpan;
 
-            total += STEM_LENGTH_LIMIT_PENALTY * Math.max(0.0, dirSign * (info.shortestYUpSs() - currentY));
+            total += STEM_LENGTH_LIMIT_PENALTY * Math.max(0.0, dirSign * (stemShortestYs[i] - currentY));
             total += STEM_LENGTH_DEMERIT_FACTOR
-                * shrinkExtraWeight(dirSign * (currentY - info.idealYUpSs()), SHRINK_EXTRA_WEIGHT_FACTOR);
+                * shrinkExtraWeight(dirSign * (currentY - stemIdealYs[i]), SHRINK_EXTRA_WEIGHT_FACTOR);
         }
 
-        return total / Math.max(stems.size(), 1);
+        return total / stemCount;
     }
 
     /**
@@ -908,11 +982,12 @@ final class BeamScoring {
      * harshly penalized, except that a flat beam is a defensible choice when the
      * damped slope was near zero anyway.
      *
-     * @param config the candidate to score
+     * @param leftY  the beam center Y at the first stem
+     * @param rightY the beam center Y at the last stem
      * @return the demerits charged
      */
-    private double scoreSlopeDirection(BeamConfiguration config) {
-        var dy = config.dy();
+    double scoreSlopeDirection(double leftY, double rightY) {
+        var dy = rightY - leftY;
         var dampedDy = unquantedRightY - unquantedLeftY;
 
         if (Math.signum(dampedDy) == Math.signum(dy)) {
@@ -930,23 +1005,25 @@ final class BeamScoring {
      * Port of {@code score_slope_musical}: penalizes a slope steeper than the one
      * the music itself suggests.
      *
-     * @param config the candidate to score
+     * @param leftY  the beam center Y at the first stem
+     * @param rightY the beam center Y at the last stem
      * @return the demerits charged
      */
-    private double scoreSlopeMusical(BeamConfiguration config) {
+    double scoreSlopeMusical(double leftY, double rightY) {
         return MUSICAL_DIRECTION_FACTOR
-            * Math.max(0.0, Math.abs(config.dy()) - Math.abs(musicalDy));
+            * Math.max(0.0, Math.abs(rightY - leftY) - Math.abs(musicalDy));
     }
 
     /**
      * Port of {@code score_slope_ideal}: penalizes deviation from the damped slope.
      *
-     * @param config the candidate to score
+     * @param leftY  the beam center Y at the first stem
+     * @param rightY the beam center Y at the last stem
      * @return the demerits charged
      */
-    private double scoreSlopeIdeal(BeamConfiguration config) {
+    double scoreSlopeIdeal(double leftY, double rightY) {
         var dampedDy = unquantedRightY - unquantedLeftY;
-        var deviation = Math.abs(dampedDy) - Math.abs(config.dy());
+        var deviation = Math.abs(dampedDy) - Math.abs(rightY - leftY);
         return shrinkExtraWeight(deviation, SHRINK_EXTRA_WEIGHT_FACTOR) * IDEAL_SLOPE_FACTOR;
     }
 
@@ -955,15 +1032,16 @@ final class BeamScoring {
      * the staff, an inter quant puts a staff line in a visually wrong place, which
      * is worse than the generic forbidden-quant case.
      *
-     * @param config the candidate to score
+     * @param leftY  the beam center Y at the first stem
+     * @param rightY the beam center Y at the last stem
      * @return the demerits charged
      */
-    private double scoreHorizontalInterQuants(BeamConfiguration config) {
-        if (config.dy() != 0.0 || Math.abs(config.leftY) >= STAFF_RADIUS_SS) {
+    double scoreHorizontalInterQuants(double leftY, double rightY) {
+        if (rightY - leftY != 0.0 || Math.abs(leftY) >= STAFF_RADIUS_SS) {
             return 0.0;
         }
 
-        var yshift = config.leftY - ROUND_HALF_UP_OFFSET;
+        var yshift = leftY - ROUND_HALF_UP_OFFSET;
         var rounded = Math.floor(yshift + ROUND_HALF_UP_OFFSET);
 
         if (Math.abs(rounded - yshift) < HORIZONTAL_INTER_QUANT_TOLERANCE_SS) {
@@ -978,66 +1056,89 @@ final class BeamScoring {
      * falling inside the white gaps between stacked beams; the second penalizes the
      * specific quants that make a secondary beam land badly.
      *
-     * @param config the candidate to score
+     * @param leftY  the beam center Y at the first stem
+     * @param rightY the beam center Y at the last stem
      * @return the demerits charged
      */
-    private double scoreForbiddenQuants(BeamConfiguration config) {
-        var edgeBeamCountLeft = stems.get(0).beamCount();
-        var edgeBeamCountRight = stems.get(stems.size() - 1).beamCount();
-        var maxEdgeBeamCount = Math.max(edgeBeamCountLeft, edgeBeamCountRight);
-        var extraDemerit = SECONDARY_BEAM_DEMERIT / maxEdgeBeamCount;
-        var dy = config.dy();
+    double scoreForbiddenQuants(double leftY, double rightY) {
+        var dy = rightY - leftY;
+        var demerits = staffLinesInBeamGaps(leftY, edgeBeamCountLeft)
+            + staffLinesInBeamGaps(rightY, edgeBeamCountRight);
+
+        if (Math.max(edgeBeamCountLeft, edgeBeamCountRight) >= 2) {
+            demerits += badSecondaryQuant(leftY, edgeBeamCountLeft, dy)
+                + badSecondaryQuant(rightY, edgeBeamCountRight, dy);
+        }
+
+        return demerits;
+    }
+
+    /**
+     * First block of {@code score_forbidden_quants}: a staff line falling inside
+     * one of the white gaps between this edge's stacked beams reads as a printing
+     * error, and the closer it sits to the middle of the gap the worse it looks.
+     *
+     * @param edgeY         the beam center Y at this edge
+     * @param edgeBeamCount how many beams reach this edge
+     * @return the demerits charged
+     */
+    double staffLinesInBeamGaps(double edgeY, int edgeBeamCount) {
         var demerits = 0.0;
 
-        for (var edge = LEFT_EDGE; edge <= RIGHT_EDGE; edge++) {
-            var edgeY = config.y(edge);
-            var edgeBeamCount = edge == LEFT_EDGE ? edgeBeamCountLeft : edgeBeamCountRight;
+        for (var j = 1; j <= edgeBeamCount; j++) {
+            var gap1 = edgeY - dirSign * ((j - 1) * BEAM_TRANSLATION_SS
+                + BEAM_THICKNESS_SS / 2.0
+                - STAFF_LINE_THICKNESS_SS / FORBIDDEN_QUANT_FUDGE_FACTOR);
+            var gap2 = edgeY - dirSign * (j * BEAM_TRANSLATION_SS
+                - BEAM_THICKNESS_SS / 2.0
+                + STAFF_LINE_THICKNESS_SS / FORBIDDEN_QUANT_FUDGE_FACTOR);
+            var gapBottom = Math.min(gap1, gap2);
+            var gapTop = Math.max(gap1, gap2);
+            var gapLength = gapTop - gapBottom;
 
-            for (var j = 1; j <= edgeBeamCount; j++) {
-                var gap1 = edgeY - dirSign * ((j - 1) * BEAM_TRANSLATION_SS
-                    + BEAM_THICKNESS_SS / 2.0
-                    - STAFF_LINE_THICKNESS_SS / FORBIDDEN_QUANT_FUDGE_FACTOR);
-                var gap2 = edgeY - dirSign * (j * BEAM_TRANSLATION_SS
-                    - BEAM_THICKNESS_SS / 2.0
-                    + STAFF_LINE_THICKNESS_SS / FORBIDDEN_QUANT_FUDGE_FACTOR);
-                var gapBottom = Math.min(gap1, gap2);
-                var gapTop = Math.max(gap1, gap2);
-                var gapLength = gapTop - gapBottom;
-
-                for (var k = -STAFF_RADIUS_SS; k <= STAFF_RADIUS_SS + BEAM_EPS; k += STAFF_LINE_STEP_SS) {
-                    if (k < gapBottom || k > gapTop) {
-                        continue;
-                    }
-
-                    var distance = Math.min(Math.abs(gapTop - k), Math.abs(gapBottom - k));
-                    demerits += extraDemerit * (FORBIDDEN_QUANT_FIXED_DEMERIT
-                        + (1.0 - FORBIDDEN_QUANT_FIXED_DEMERIT) * (distance / gapLength) * 2.0);
+            for (var k = -STAFF_RADIUS_SS; k <= STAFF_RADIUS_SS + BEAM_EPS; k += STAFF_LINE_STEP_SS) {
+                if (k < gapBottom || k > gapTop) {
+                    continue;
                 }
+
+                var distance = Math.min(Math.abs(gapTop - k), Math.abs(gapBottom - k));
+                demerits += extraDemerit * (FORBIDDEN_QUANT_FIXED_DEMERIT
+                    + (1.0 - FORBIDDEN_QUANT_FIXED_DEMERIT) * (distance / gapLength) * 2.0);
             }
         }
 
-        if (maxEdgeBeamCount >= 2) {
-            for (var edge = LEFT_EDGE; edge <= RIGHT_EDGE; edge++) {
-                var edgeY = config.y(edge);
-                var edgeBeamCount = edge == LEFT_EDGE ? edgeBeamCountLeft : edgeBeamCountRight;
-                var fraction = myModf(edgeY);
-                var wrongWay = dirSign > 0 ? dy <= BEAM_EPS : dy >= BEAM_EPS;
-                var badQuant = dirSign > 0 ? SIT_SS : HANG_SS;
+        return demerits;
+    }
 
-                if (edgeBeamCount >= 2
-                    && Math.abs(edgeY - dirSign * BEAM_TRANSLATION_SS) < STAFF_RADIUS_SS + INTER_SS
-                    && wrongWay
-                    && Math.abs(fraction - badQuant) < BEAM_EPS) {
-                    demerits += extraDemerit;
-                }
+    /**
+     * Second block of {@code score_forbidden_quants}: with the beam sloping the
+     * wrong way, a secondary beam landing on {@code sit} (up) or {@code hang}
+     * (down) — or, with three beams, on {@code straddle} — puts the inner beam in
+     * a bad place against the staff.
+     *
+     * @param edgeY         the beam center Y at this edge
+     * @param edgeBeamCount how many beams reach this edge
+     * @param dy            the candidate's slope, as a rise over the group
+     * @return the demerits charged
+     */
+    double badSecondaryQuant(double edgeY, int edgeBeamCount, double dy) {
+        var fraction = myModf(edgeY);
+        var wrongWay = dirSign > 0 ? dy <= BEAM_EPS : dy >= BEAM_EPS;
+        var badQuant = dirSign > 0 ? SIT_SS : HANG_SS;
+        var demerits = 0.0;
 
-                if (edgeBeamCount >= 3
-                    && Math.abs(edgeY - 2.0 * dirSign * BEAM_TRANSLATION_SS) < STAFF_RADIUS_SS + INTER_SS
-                    && wrongWay
-                    && Math.abs(fraction - STRADDLE_SS) < BEAM_EPS) {
-                    demerits += extraDemerit;
-                }
-            }
+        if (edgeBeamCount >= 2
+            && Math.abs(edgeY - dirSign * BEAM_TRANSLATION_SS) < STAFF_RADIUS_SS + INTER_SS
+            && wrongWay
+            && Math.abs(fraction - badQuant) < BEAM_EPS) {
+            demerits += extraDemerit;
+        }
+
+        if (edgeBeamCount >= 3
+            && Math.abs(edgeY - 2.0 * dirSign * BEAM_TRANSLATION_SS) < STAFF_RADIUS_SS + INTER_SS
+            && wrongWay
+            && Math.abs(fraction - STRADDLE_SS) < BEAM_EPS) {
+            demerits += extraDemerit;
         }
 
         return demerits;
@@ -1070,19 +1171,19 @@ final class BeamScoring {
         computeStemInfos();
         logInputs();
 
-        if (stems.size() < 2 || xSpan == 0.0) {
-            var y = stemInfos.isEmpty() ? 0.0 : stemInfos.get(0).idealYUpSs();
+        if (stemCount < 2 || xSpan == 0.0) {
+            var y = stemCount == 0 ? 0.0 : stemIdealYs[0];
             return new BeamPosition(y, y);
         }
 
         computeUnquantedPositions();
 
-        var configs = generateQuants();
+        var best = chooseBestConfiguration();
 
-        if (configs.isEmpty()) {
+        if (best == null) {
             LOG.debug(
                 "No viable beam quanting found; using unquanted y. stems={} xSpan={} left={} right={}",
-                stems.size(),
+                stemCount,
                 xSpan,
                 unquantedLeftY,
                 unquantedRightY
@@ -1090,21 +1191,7 @@ final class BeamScoring {
             return new BeamPosition(unquantedLeftY, unquantedRightY);
         }
 
-        var best = configs.get(0);
-        score(best);
-
-        for (var i = 1; i < configs.size(); i++) {
-            var config = configs.get(i);
-            score(config);
-
-            if (config.demerits < best.demerits) {
-                best = config;
-            }
-        }
-
-        logChoice(configs, best);
-
-        return new BeamPosition(best.leftY, best.rightY);
+        return new BeamPosition(best.leftY(), best.rightY());
     }
 
     // ---------------------------------------------------------------------
@@ -1119,25 +1206,22 @@ final class BeamScoring {
 
         LOG.debug(
             "beam group: stems={} dir={} forcedFraction={} maxBeamCount={} xSpan={}",
-            stems.size(),
+            stemCount,
             dirSign > 0 ? "up" : "down",
             fmt(forcedFraction),
             maxBeamCount,
             fmt(xSpan)
         );
 
-        for (var i = 0; i < stems.size(); i++) {
-            var stem = stems.get(i);
-            var info = stemInfos.get(i);
+        for (var i = 0; i < stemCount; i++) {
             LOG.debug(
-                "  stem[{}] x={} headPos={} headY={} beams={} ideal={} shortest={}",
+                "  stem[{}] x={} headPos={} headY={} ideal={} shortest={}",
                 i,
-                fmt(stem.xSs()),
-                stem.headHalfPos(),
-                fmt(stem.headYUpSs()),
-                stem.beamCount(),
-                fmt(info.idealYUpSs()),
-                fmt(info.shortestYUpSs())
+                fmt(stemXs[i]),
+                stemHeadHalfPositions[i],
+                fmt(stemHeadYs[i]),
+                fmt(stemIdealYs[i]),
+                fmt(stemShortestYs[i])
             );
         }
     }
@@ -1147,75 +1231,44 @@ final class BeamScoring {
      * came out angled can be compared scorer-by-scorer against the flat option that
      * lost to it.
      *
-     * @param configs every scored candidate
-     * @param best    the winner
+     * @param considered how many candidates were scored
+     * @param best       the winner
+     * @param bestFlat   the best flat candidate, or null if none was in range
      */
-    private void logChoice(List<BeamConfiguration> configs, BeamConfiguration best) {
+    private void logChoice(int considered, Candidate best, @Nullable Candidate bestFlat) {
         if (!LOG.isDebugEnabled()) {
             return;
         }
 
-        LOG.debug("  candidates={}", configs.size());
-        logConfig("winner", best);
-
-        BeamConfiguration bestFlat = null;
-
-        for (var config : configs) {
-            if (Math.abs(config.dy()) < BEAM_EPS && (bestFlat == null || config.demerits < bestFlat.demerits)) {
-                bestFlat = config;
-            }
-        }
+        LOG.debug("  candidates={}", considered);
+        logCandidate("winner", best);
 
         if (bestFlat == null) {
             LOG.debug("  best flat: none in range");
         } else if (bestFlat != best) {
-            logConfig("best flat", bestFlat);
+            logCandidate("best flat", bestFlat);
         }
     }
 
     /**
-     * @param label  what the candidate is (winner, best flat, …)
-     * @param config the candidate to describe
+     * @param label     what the candidate is (winner, best flat, …)
+     * @param candidate the candidate to describe
      */
-    private static void logConfig(String label, BeamConfiguration config) {
+    private void logCandidate(String label, Candidate candidate) {
         LOG.debug(
             "  {}: left={} right={} dy={} demerits={} [{}]",
             label,
-            fmt(config.leftY),
-            fmt(config.rightY),
-            fmt(config.dy()),
-            fmt(config.demerits),
-            config.breakdown
+            fmt(candidate.leftY()),
+            fmt(candidate.rightY()),
+            fmt(candidate.dy()),
+            fmt(candidate.demerits()),
+            breakdownOf(candidate)
         );
     }
 
     // ---------------------------------------------------------------------
-    // Accessors for the pipeline state (used by later stages and by tests)
+    // Accessors for the pipeline state (used by tests)
     // ---------------------------------------------------------------------
-
-    List<StemInput> stems() {
-        return stems;
-    }
-
-    int dirSign() {
-        return dirSign;
-    }
-
-    double forcedFraction() {
-        return forcedFraction;
-    }
-
-    int maxBeamCount() {
-        return maxBeamCount;
-    }
-
-    double xSpan() {
-        return xSpan;
-    }
-
-    List<StemInfo> stemInfos() {
-        return stemInfos;
-    }
 
     double unquantedLeftY() {
         return unquantedLeftY;
